--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "expo-camera": "^8.0.0",
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
+    "expo-image-picker": "~8.0.1",
     "expo-permissions": "~8.0.0",
     "expo-web-browser": "~8.0.0",
+    "firebase": "^7.6.2",
     "native-base": "^2.13.8",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
@@ -35,8 +37,7 @@
     "react-native-web": "~0.11.7",
     "react-navigation": "~4.0.10",
     "react-navigation-stack": "~1.10.3",
-    "react-navigation-tabs": "~2.6.2",
-    "expo-image-picker": "~8.0.1"
+    "react-navigation-tabs": "~2.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
