--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "expo-constants": "~8.0.0",
     "expo-font": "~8.0.0",
     "expo-image-picker": "~8.0.1",
+    "expo-linear-gradient": "^8.0.0",
     "expo-permissions": "~8.0.0",
     "expo-random": "^8.0.0",
     "expo-web-browser": "~8.0.0",
@@ -34,7 +35,6 @@
     "react-native-reanimated": "~1.4.0",
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-swiper": "^1.5.14",
-    "react-native-uuid": "^1.4.9",
     "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation": "~4.0.10",
